src/vm/snapshots/hebi__vm__tests__call_fn_with_args__error_not_enough_args.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
fn test(v):
  return v

test()


# Result:
Err(
    Vm(
        SpannedError {
            span: Span {
                start: 0,
                end: 0,
            },
            message: "expected 1 arg, got 0",
        },
    ),
)
